kubernetes/network-policy/network-policy-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-giropops-ingress-nginx-namespaces
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    #- namespaceSelector:
    #    matchLabels:
    #      kubernetes.io/metadata.name: giropops
    #- namespaceSelector:
    #    matchLabels:
    #      kubernetes.io/metadata.name: ingress-nginx
    - namespaceSelector:
        matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values: ["ingress-nginx", "giropops"]
