kubernetes/network-policy/network-policy-3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
